frontend/src/App.css
.header {
  margin: 0 0 2em;
  text-align: center;
}

.header h2 {
  font-size: 6rem;
  margin: 0;
  padding: 0;
}

.steps {
  text-align: center;
  list-style-position: inside;
}
.inside-steps {
  text-align: left;
  margin-left: 35%;
}

.meeting-type {
  text-align: center;
  margin: 1em 0;
}

label {
  font-size: 1.5rem;
  font-weight: 100;
}

.meeting-type label {
  margin-right: 1em;
}

.meeting-type .select-container {
  background-color: grey;
  padding: 1em;
  border-radius: 5em;
  height: fit-content;
}

.meeting-type select {
  width: 12%;
  border: none;
  outline: none;
  font-size: 1.1rem;
  /* font-weight: bold; */
  text-align: center;
  background-color: grey;
  color: white;
}
.cut-off {
  text-align: center;
  margin: 1em 0;
  padding: 1em;
}

.cut-off label {
  margin-right: 1em;
}
.cutoff-input {
  background-color: grey;
  padding: 1em;
  border-radius: 5em;
  height: fit-content;
  width: 12%;
  border: none;
  outline: none;
  font-size: 1.1rem;
  text-align: center;
  color: white;
}

.meeting-documents {
  margin: 3em 3em;
  display: flex;
  justify-content: space-between;
}

.meeting-documents button:hover {
  background-color: rgb(53, 171, 53);
}

.meeting-documents button:active {
  background-color: rgba(33, 135, 33, 0.633);
}

.file {
  width: 30%;
}

.file form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.file-input-btn {
  width: 100%;
  height: 15em;
  border: 1px dashed black;
  border-radius: 1em;
  padding: 1em;
  background-color: white;
  text-align: center;
  text-overflow: ellipsis;
}

.file-input-btn p {
  font-size: 1.2rem;
}

.file-input-btn:hover {
  background-color: rgb(223, 223, 223);
}

.file-input-btn:active {
  background-color: rgba(223, 223, 223, 0.571);
}

.file-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(132, 132, 132);
  border: 1px solid black;
  padding: 1em;
}

.file-info .cancel-btn {
  background-color: red;
  border-radius: 0.5em;
  border: none;
  height: fit-content;
}

.Process_button {
  text-align: center;
  padding: 1em;
}

button {
  border: none;
  outline: none;
  padding: 1em 2em;
  border-radius: 0.7em;
  height: fit-content;
  align-self: center;
}

.Process_button button {
  background-color: #000;
  font-size: 1.2em;
  color: white;
  text-transform: uppercase;
}

.Process_button button.ready {
  background-color: rgb(33, 135, 33);
}

.Process_button button.ready:hover {
  background-color: rgb(53, 171, 53);
}

.Process_button button.ready:active {
  background-color: rgba(33, 135, 33, 0.633);
}

.displayed-data {
  margin: 5em 10em;
}

/* .displayed-data div {
  margin-bottom: 1em;
} */

.download-btn {
  text-align: end;
  margin-bottom: 1em;
}

.download-btn button {
  background-color: rgb(210, 208, 208);
  color: black;
}

.heading,
.content {
  display: grid;
  grid-template-columns: 34% 33% 33%;
  background-color: rgb(172, 172, 172);
  border-bottom: 1px solid grey;
}

.content {
  background-color: rgb(210, 208, 208);
}

.heading-item,
.content-item {
  padding: 1em;
  text-transform: uppercase;
  text-align: center;
}

.heading-item {
  font-weight: bold;
  font-size: 1.2rem;
}

